tests/negative/list_switch_continue_break_oob.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for x in 0..<8 {
    switch x {
      case 3: { continue }
      default: { }
    }
    if (x == 6) { break }
    lst.push(x)
  }
  lst[5] = 1
  return 0
}
